--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,5 +1,5 @@
 <form
-  action="http://localhost:8080/products"
+  action="http://localhost:8080/api/products"
   method="post"
   enctype="multipart/form-data"
 >
