--- a/src/views/cardProducts.handlebars
+++ b/src/views/cardProducts.handlebars
@@ -3,6 +3,7 @@
     <title>Lista de Productos</title>
   </head>
   <body>
+
     <h1>Lista de Productos</h1>
 
     {{#each cardProducts}}
@@ -18,4 +19,4 @@
   </body>
 </html>
 
-<script src="/src/views/boton.js"></script>
+<script src="/static/js/boton.js"></script>
