--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,3 +1,10 @@
+<h1>Bienvenido {{first_name}} {{last_name}}</h1>
+
+<h2>email: {{email}}</h2>
+<h2>Edad: {{age}} años</h2>
+
+<button id="logoutButton">Logout</button>
+
 <form
   action="http://localhost:8080/api/products"
   method="post"
@@ -41,3 +48,8 @@
 {{/each}}
 
 {{! title, description, code, price, stock, category, image }}
+<script>
+  document.getElementById("logoutButton").addEventListener("click", function() {
+  fetch("/logout", { method: "GET", credentials: "same-origin"
+  }).then(function() { window.location.href = "/login"; }); });
+</script>
