--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -3,5 +3,6 @@
   <input type="text" name="password" value="password" />
 
   <button value="submit">Logearse</button>
+  <a href="http://localhost:8080/recover">Recuperar contraseña</a>
 
 </form>
