--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,8 +1,16 @@
 <form action="http://localhost:8080/api/login" method="post">
+  <h2>Inicia Sesion</h2>
   <input type="text" name="email" value="email" />
+  <br />
+  <br />
   <input type="text" name="password" value="password" />
+  <br />
+  <br />
 
   <button value="submit">Logearse</button>
+  <br />
+  <br />
+  <a href="http://localhost:8080/api/github">Iniciar con GitHub</a><br />
   <a href="http://localhost:8080/recover">Recuperar contraseña</a>
 
 </form>
