--- a/src/views/recover.handlebars
+++ b/src/views/recover.handlebars
@@ -1,4 +1,4 @@
-<form action="http://localhost:8080/api/recover" method="post">
+<form action="http://localhost:8080/recover" method="post">
   <input type="text" name="email" value="email" />
   <input type="text" name="password" value="password" />
   <button value="submit">Recuperar Contraseña</button>
