--- a/src/views/signup.handlebars
+++ b/src/views/signup.handlebars
@@ -1,4 +1,4 @@
-<form action="http://localhost:8080/api/singup" method="post">
+<form action="http://localhost:8080/api/signup" method="post">
   <input type="text" name="first_name" value="first_name" />
   <input type="text" name="last_name" value="last_name" />
   <input type="text" name="email" value="email" />
